# MAD

./: CMakeLists.txt  MacsurAdapter.pro  README.txt  maaddmodel.cpp  maaddmodel.h  maaddmodel.ui  macsur-adapter.pro  mafileparser.cpp  mafileparser.h  mafileparser.ui  main.cpp  mamainform.cpp  mamainform.h  mamainform.ui  settings.pro
builds/build-macsur-adapter-Desktop_Qt_5_0_2_clang_64bit-Debug/: Makefile  moc_mamainform.cpp  ui_mamainform.h
codeSnippets/csv2xml/: csv.cpp  csvQtExampleText.txt
docs/WindowsInstallerAttempts/: notes.txt  try1.nsi  try2.nsi  try3.nsi  try3b.nsi  try4.nsi
resources/: input.txt
src/: MacsurAdapter.pro
src/MacsurAdapter/: CMakeLists.txt  Info.plist  MacsurAdapter.pro  README.txt  linecount  linecountALL  linecountTotals  mad.icns  madmainwindow.cpp  madmainwindow.h  madmainwindowbase.ui  main.cpp  notes.txt
src/MacsurAdapter/buildXcode/: CMakeCache.txt  cmake_install.cmake  moc_madmainwindow.cxx  qrc_resources.cxx  ui_madcsvreaderbase.h  ui_maddataclassificationbase.h  ui_madmainwindowbase.h  ui_madmodelmanagerbase.h  ui_madtextdisplayformbase.h  ui_madvariablemanagerbase.h
src/MacsurAdapter/buildXcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  MacsurAdapter_cmakeRulesBuildPhase.makeRelWithDebInfo  MacsurAdapter_cmakeRulesBuildPhase.makeRelease  MacsurAdapter_postBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
src/MacsurAdapter/buildXcode/Debug/: MacsurAdapter
src/MacsurAdapter/buildXcode/MacsurAdapter.build/Debug/ALL_BUILD.build/: Script-9C4F79E0CCB246BE8DC03CCC.sh
src/MacsurAdapter/buildXcode/MacsurAdapter.build/Debug/MacsurAdapter.build/: MacsurAdapter.dep  MacsurAdapter~.dep  Script-0C7A3F0121D54E4A97617D41.sh  Script-5776A5CB26494F2B863F35CB.sh
src/MacsurAdapter/buildXcode/MacsurAdapter.build/Debug/MacsurAdapter.build/Objects-normal/x86_64/: MacsurAdapter.LinkFileList  maddata.d  maddata.dia  maddataclassification.d  madguid.d  madmainwindow.d  madmainwindow.dia  madmodel.d  madserialisable.d  madtextdisplayform.d  madutils.d  main.d  main.dia  moc_maddataclassification.d  moc_madmainwindow.d  moc_madmainwindow.dia  moc_madtextdisplayform.d  qrc_resources.d
src/MacsurAdapter/buildXcode/MacsurAdapter.build/Debug/ZERO_CHECK.build/: Script-CC9B23464E1C46A4BF0C9F0E.sh
src/MacsurAdapter/buildXcode/MacsurAdapter.xcodeproj/: project.pbxproj
src/MacsurAdapter/buildXcode/MacsurAdapter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/MacsurAdapter/buildXcode/MacsurAdapter.xcodeproj/project.xcworkspace/xcuserdata/arkygeek.xcuserdatad/: UserInterfaceState.xcuserstate
src/MacsurAdapter/buildXcode/MacsurAdapter.xcodeproj/xcuserdata/arkygeek.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  MacsurAdapter.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist
src/MacsurAdapter/buildXcode/gui/: moc_madcsvreader.cxx  moc_maddataclassification.cxx  moc_madlogindialog.cxx  moc_madmodelmanager.cxx  moc_madtextdisplayform.cxx  moc_madvariablemanager.cxx
src/MacsurAdapter/buildXcode/resources/: resources.qrc.depends
src/MacsurAdapter/cmake/Modules/: FindQxt.cmake
src/MacsurAdapter/gui/: madcsvreader.cpp  madcsvreader.h  madcsvreaderbase.ui  maddataclassification.cpp  maddataclassification.h  maddataclassificationbase.ui  madlogindialog.cpp  madlogindialog.h  madmodelmanager.cpp  madmodelmanager.h  madmodelmanagerbase.ui  madtextdisplayform.cpp  madtextdisplayform.h  madtextdisplayformbase.ui  madvariablemanager.cpp  madvariablemanager.h  madvariablemanagerbase.ui
src/MacsurAdapter/lib/: mad.h  madcsv.cpp  madcsv.h  madcultivation.h  maddata.cpp  maddata.h  maddataset.cpp  maddataset.h  madguid.cpp  madguid.h  madmodel.cpp  madmodel.h  madscenario.cpp  madscenario.h  madserialisable.cpp  madserialisable.h  madsubcategory.cpp  madutils.cpp  madutils.h  madversion.h  overloads.h  xmlTemplate4ICASAMVL.txt
src/MacsurAdapter/lib/dataclassification/: maddataclassificationcultivation.cpp  maddataclassificationcultivation.h  maddataclassificationinitialvalues.cpp  maddataclassificationinitialvalues.h  maddataclassificationmanagement.cpp  maddataclassificationmanagement.h  maddataclassificationphenology.cpp  maddataclassificationphenology.h  maddataclassificationprevcrop.cpp  maddataclassificationprevcrop.h  maddataclassificationsitedata.cpp  maddataclassificationsitedata.h  maddataclassificationsoil.cpp  maddataclassificationsoil.h  maddataclassificationweather.cpp  maddataclassificationweather.h  madsubcategory.cpp  madsubcategory.h
src/MacsurAdapter/lib/dataclassification/statevars/: madstatevars.cpp  madstatevars.h  madsvcrop.cpp  madsvcrop.h  madsvobservations.cpp  madsvobservations.h  madsvsoil.cpp  madsvsoil.h  madsvsurfacefluxes.cpp  madsvsurfacefluxes.h
src/MacsurAdapter/lib/statevars/: madcultivation.cpp  madstatevars.cpp  madstatevars.h  madsvcrop.cpp  madsvcrop.h  madsvobservations.cpp  madsvobservations.h  madsvsoil.cpp  madsvsoil.h  madsvsurfacefluxes.cpp  madsvsurfacefluxes.h
src/MacsurAdapter/resources/: CRU-TS-2.0.html  CropMWP1TaskC1-2.htm  Dai.html  HadISST.html  Hulme-CRU.html  I-COADS.html  Jones-CRU-SLP.html  JonesCRUAirTemp.html  Kaplan-SLP.html  Kaplan-SST.html  Lucas-Waliser-Satellite-ECT-Corrected-OLR.html  NCAR-Sea-Level-Pressure.html  NCEP-NCAR-Reanalysis.html  Reynolds-Optimum-Interpolation-OI-SST.html  Reynolds-Optimum-Interpolation-Ver-2-OIv2.html  Reynolds-Reconstructed-SST.html  Smith-Reynolds-Extended-Reconstructed-SLP-ERSLP.html  Smith-Reynolds-Extended-Reconstructed-SST-ERSST.html  about.txt  cmap.html  cropm.txt  livem.txt  resources.qrc  tradem.txt
src/MacsurAdapter/resources/CropMWP1TaskC1-2_files/: filelist.xml  header.htm
src/MacsurAdapter/resources/agmip/: climate_codes.csv  crop_codes.csv  explanatory_notes.csv  management_codes.csv  management_info.csv  measured_data.csv  metadata_codes.csv  other_codes.csv  pest_codes.csv
src/gui/: gui.pro  mafileinputmanager.cpp  mafileinputmanager.h  mafileinputmanagerbase.ui  main.cpp  mamainform.cpp  mamainform.h
ui/: mamainformbase.ui
(+374 files in other folders)
